Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120542

Editable SpinBox crashes Quick3d application

    XMLWordPrintable

Details

    • Android, iOS/tvOS/watchOS, macOS, Windows
    • 1863c0681 (dev), 2f9ef932b (6.7), e529f8220 (6.6), b27a5073f (tqtc/lts-6.5)

    Description

       in Quick 3D application if an editable spin box is added, and when a simple click on the editable area is done (with the intention to edit it) this results in a crash.

      The issue can be easily replicated using the Qt bundled "Qt Quick 3D - Quick Items" example. Simply add a SpinBox under one of the Quick Item Nodes and enable editing. 

       

      Attached same modified example.

      Attachments

        For Gerrit Dashboard: QTBUG-120542
        # Subject Branch Project Status CR V

        Activity

          People

            dorisverria Doris Verria
            irfan.omair@digia.com Irfan Omair
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: